feat: rate limit writing Comments
